--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "timeago.js": "^4.0.2"
