--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "timeago.js": "^4.0.2"
