--- a/Server/package.json
+++ b/Server/package.json
@@ -36,8 +36,10 @@
 		"timeago.js": "^4.0.2"
 	},
 	"devDependencies": {
+		"jest": "^28.1.3",
 		"nodemon": "^2.0.19",
-		"standard": "17.0.0"
+		"standard": "17.0.0",
+		"supertest": "6.2.4"
 	},
 	"eslintConfig": {
 		"extends": "./node_modules/standard/eslintrc.json",
