--- a/Dockerfile.nodejs
+++ b/Dockerfile.nodejs
@@ -4,12 +4,12 @@ WORKDIR /app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ./Server/package*.json ./
+COPY ./package*.json ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
 # Bundle app source
-COPY ./Server .
+COPY . .
 EXPOSE 3000
 CMD [ "node", "src/app.js" ]
